changed some style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Stopwatch</h1>
     <div id="container">
 
-        <div class="time">
+        <div class="time1">
             <div class="hr">
                 <p id="hour-lable" class="lable">Hours</p>
                 <div class="inline">
@@ -37,7 +37,7 @@
                 
             </div>
         </div>
-        <div class="btn">
+        <div class="btn1">
             <button id="start" class="btn">Start</button>
             <button id="reset" class="btn">Reset</button>
         </div>
